tests/lean/bad_error5.lean.expected.out
bad_error5.lean:13:10: error: _tactic._val_3: trying to evaluate sorry
bad_error5.lean:9:11: warning: declaration 'V' uses sorry
bad_error5.lean:9:11: warning: declaration 'V.equations._eqn_1' uses sorry
